--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
 	"name": "@prismicio/mock",
 	"version": "0.0.0",
-	"description": "Generate mock Prismic documents, fields, Custom Types, and Slices for development and testing environments",
+	"description": "Generate mock Prismic documents, fields, Slices, and models for development and testing environments",
 	"keywords": [
 		"typescript",
-		"prismic"
+		"prismic",
+		"mock",
+		"test",
+		"testing"
 	],
 	"repository": {
 		"type": "git",
-		"url": "ssh://git@github.com/github_org_slash_github_repo.git"
+		"url": "ssh://git@github.com/prismicio/prismic-mock.git"
 	},
 	"license": "Apache-2.0",
 	"author": "Prismic <contact@prismic.io> (https://prismic.io)",
