--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
 		"@types/faker": "^5.5.7",
 		"@typescript-eslint/eslint-plugin": "^4.29.1",
 		"@typescript-eslint/parser": "^4.29.1",
-		"ava": "^3.15.0",
+		"ava": "^4.0.0-alpha.2",
 		"eslint": "^7.32.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-prettier": "^3.4.0",
