--- a/package.json
+++ b/package.json
@@ -64,8 +64,10 @@
 		"eslint": "^7.32.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-prettier": "^3.4.0",
+		"eslint-plugin-tsdoc": "^0.2.14",
 		"nyc": "^15.1.0",
 		"prettier": "^2.3.2",
+		"prettier-plugin-jsdoc": "^0.3.23",
 		"siroc": "^0.15.0",
 		"standard-version": "^9.3.1",
 		"ts-eager": "^2.0.2",
