--- a/package.json
+++ b/package.json
@@ -15,11 +15,16 @@
 	},
 	"license": "Apache-2.0",
 	"author": "Prismic <contact@prismic.io> (https://prismic.io)",
+	"sideEffects": false,
 	"type": "module",
 	"exports": {
 		".": {
 			"require": "./dist/index.cjs",
 			"import": "./dist/index.mjs"
+		},
+		"./api": {
+			"require": "./dist/api/index.cjs",
+			"import": "./dist/api/index.mjs"
 		},
 		"./model": {
 			"require": "./dist/model/index.cjs",
