--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,5 @@
 {
-	"plugins":[
-		"prettier-plugin-jsdoc"
-	],
+	"plugins": ["prettier-plugin-jsdoc"],
 	"jsdocSeparateReturnsFromParam": true,
 	"jsdocSingleLineComment": false,
 	"tsdoc": true,
@@ -13,7 +11,7 @@
 	"jsxSingleQuote": false,
 	"trailingComma": "all",
 	"bracketSpacing": true,
-	"jsxBracketSameLine": false,
+	"bracketSameLine": false,
 	"arrowParens": "always",
 	"requirePragma": false,
 	"insertPragma": false,
