--- a/package.json
+++ b/package.json
@@ -63,20 +63,20 @@
 	},
 	"devDependencies": {
 		"@types/faker": "^5.5.8",
-		"@typescript-eslint/eslint-plugin": "^4.31.1",
-		"@typescript-eslint/parser": "^4.31.1",
-		"ava": "^3.15.0",
-		"eslint": "^7.32.0",
+		"@typescript-eslint/eslint-plugin": "^5.12.0",
+		"@typescript-eslint/parser": "^5.12.0",
+		"ava": "^4.0.1",
+		"esbuild-register": "^3.3.2",
+		"eslint": "^8.9.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-prettier": "^4.0.0",
 		"eslint-plugin-tsdoc": "^0.2.14",
 		"nyc": "^15.1.0",
-		"prettier": "^2.4.0",
-		"prettier-plugin-jsdoc": "^0.3.24",
+		"prettier": "^2.5.1",
+		"prettier-plugin-jsdoc": "^0.3.30",
 		"siroc": "^0.16.0",
-		"standard-version": "^9.3.1",
-		"ts-eager": "^2.0.2",
-		"typescript": "^4.4.3"
+		"standard-version": "^9.3.2",
+		"typescript": "^4.5.5"
 	},
 	"engines": {
 		"node": ">=12.7.0"
