--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
 		"@typescript-eslint/eslint-plugin": "^5.12.0",
 		"@typescript-eslint/parser": "^5.12.0",
 		"ava": "^4.0.1",
+		"esbuild": "^0.14.23",
 		"esbuild-register": "^3.3.2",
 		"eslint": "^8.9.0",
 		"eslint-config-prettier": "^8.3.0",
