--- a/package.json
+++ b/package.json
@@ -47,14 +47,14 @@
 		"build": "siroc build",
 		"dev": "siroc build --watch",
 		"format": "prettier --write .",
+		"lint": "eslint --ext .js,.ts .",
 		"prepare": "npm run build",
 		"release": "npm run build && npm run test && standard-version && git push --follow-tags && npm run build && npm publish",
-		"release:dry": "standard-version --dry-run",
 		"release:alpha": "npm run build && npm run test && standard-version --release-as major --prerelease alpha && git push --follow-tags && npm run build && npm publish --tag alpha",
 		"release:alpha:dry": "standard-version --release-as major --prerelease alpha --dry-run",
-		"lint": "eslint --ext .js,.ts .",
-		"unit": "nyc --reporter=lcovonly --reporter=text --exclude-after-remap=false ava",
-		"test": "npm run lint && npm run unit"
+		"release:dry": "standard-version --dry-run",
+		"test": "npm run lint && npm run unit",
+		"unit": "nyc --reporter=lcovonly --reporter=text --exclude-after-remap=false ava"
 	},
 	"dependencies": {
 		"@prismicio/types": "^0.1.25",
@@ -66,8 +66,6 @@
 		"@typescript-eslint/eslint-plugin": "^5.12.0",
 		"@typescript-eslint/parser": "^5.12.0",
 		"ava": "^4.0.1",
-		"esbuild": "^0.14.23",
-		"esbuild-register": "^3.3.2",
 		"eslint": "^8.9.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-prettier": "^4.0.0",
@@ -77,6 +75,7 @@
 		"prettier-plugin-jsdoc": "^0.3.30",
 		"siroc": "^0.16.0",
 		"standard-version": "^9.3.2",
+		"ts-eager": "^2.0.2",
 		"typescript": "^4.5.5"
 	},
 	"engines": {
