--- a/package.json
+++ b/package.json
@@ -49,11 +49,12 @@
 		"format": "prettier --write .",
 		"lint": "eslint --ext .js,.ts .",
 		"prepare": "npm run build",
-		"release": "npm run build && npm run test && standard-version && git push --follow-tags && npm run build && npm publish",
-		"release:alpha": "npm run build && npm run test && standard-version --release-as major --prerelease alpha && git push --follow-tags && npm run build && npm publish --tag alpha",
+		"release": "npm run test && standard-version && git push --follow-tags && npm run build && npm publish",
+		"release:alpha": "npm run test && standard-version --release-as major --prerelease alpha && git push --follow-tags && npm run build && npm publish --tag alpha",
 		"release:alpha:dry": "standard-version --release-as major --prerelease alpha --dry-run",
 		"release:dry": "standard-version --dry-run",
-		"test": "npm run lint && npm run unit",
+		"size": "size-limit",
+		"test": "npm run lint && npm run unit && npm run build && npm run size",
 		"unit": "nyc --reporter=lcovonly --reporter=text --exclude-after-remap=false ava"
 	},
 	"dependencies": {
@@ -62,6 +63,7 @@
 		"faker": "^5.5.3"
 	},
 	"devDependencies": {
+		"@size-limit/preset-small-lib": "^7.0.8",
 		"@types/faker": "^5.5.8",
 		"@typescript-eslint/eslint-plugin": "^5.12.0",
 		"@typescript-eslint/parser": "^5.12.0",
@@ -74,6 +76,7 @@
 		"prettier": "^2.5.1",
 		"prettier-plugin-jsdoc": "^0.3.30",
 		"siroc": "^0.16.0",
+		"size-limit": "^7.0.8",
 		"standard-version": "^9.3.2",
 		"ts-eager": "^2.0.2",
 		"typescript": "^4.5.5"
