--- a/package.json
+++ b/package.json
@@ -58,27 +58,28 @@
 		"unit": "nyc --reporter=lcovonly --reporter=text --exclude-after-remap=false ava"
 	},
 	"dependencies": {
-		"@prismicio/types": "^0.1.25",
+		"@prismicio/types": "^0.1.27",
 		"change-case": "^4.1.2",
 		"rand-seed": "^1.0.1"
 	},
 	"devDependencies": {
 		"@size-limit/preset-small-lib": "^7.0.8",
-		"@typescript-eslint/eslint-plugin": "^5.12.0",
-		"@typescript-eslint/parser": "^5.12.0",
-		"ava": "^3.15.0",
-		"eslint": "^8.9.0",
-		"eslint-config-prettier": "^8.3.0",
+		"@typescript-eslint/eslint-plugin": "^5.15.0",
+		"@typescript-eslint/parser": "^5.15.0",
+		"ava": "^4.1.0",
+		"esbuild": "^0.14.27",
+		"esbuild-register": "^3.3.2",
+		"eslint": "^8.11.0",
+		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-prettier": "^4.0.0",
 		"eslint-plugin-tsdoc": "^0.2.14",
 		"nyc": "^15.1.0",
-		"prettier": "^2.5.1",
-		"prettier-plugin-jsdoc": "^0.3.30",
+		"prettier": "^2.6.0",
+		"prettier-plugin-jsdoc": "^0.3.31",
 		"siroc": "^0.16.0",
 		"size-limit": "^7.0.8",
 		"standard-version": "^9.3.2",
-		"ts-eager": "^2.0.2",
-		"typescript": "^4.5.5"
+		"typescript": "^4.6.2"
 	},
 	"engines": {
 		"node": ">=12.7.0"
