--- a/package.json
+++ b/package.json
@@ -57,10 +57,10 @@
 		"unit": "nyc --reporter=lcovonly --reporter=text --exclude-after-remap=false ava"
 	},
 	"dependencies": {
-		"@prismicio/types": "^0.2.8",
 		"change-case": "^4.1.2"
 	},
 	"devDependencies": {
+		"@prismicio/client": "^7.0.1",
 		"@size-limit/preset-small-lib": "^8.2.4",
 		"@typescript-eslint/eslint-plugin": "^5.59.8",
 		"@typescript-eslint/parser": "^5.59.8",
@@ -79,6 +79,9 @@
 		"typescript": "^5.0.4",
 		"vite": "^4.3.9",
 		"vite-plugin-sdk": "^0.1.1"
+	},
+	"peerDependencies": {
+		"@prismicio/client": "^7"
 	},
 	"engines": {
 		"node": ">=12.7.0"
