--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
 		"change-case": "^5.4.4"
 	},
 	"devDependencies": {
-		"@prismicio/client": "^7.6.0",
+		"@prismicio/client": "^7.9.0-alpha.0",
 		"@size-limit/preset-small-lib": "^11.1.2",
 		"@types/node": "^20.12.7",
 		"@typescript-eslint/eslint-plugin": "^7.6.0",
