chore(release): 0.3.8-alpha.0

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@prismicio/mock",
-	"version": "0.3.7",
+	"version": "0.3.8-alpha.0",
 	"description": "Generate mock Prismic documents, fields, Slices, and models for development and testing environments",
 	"keywords": [
 		"typescript",
@@ -56,7 +56,8 @@
 		"test": "npm run lint && npm run types && npm run unit && npm run build && npm run size",
 		"types": "tsc --noEmit",
 		"unit": "nyc --reporter=lcovonly --reporter=text --exclude-after-remap=false ava",
-		"unit:watch": "nyc --reporter=lcovonly --reporter=text --exclude-after-remap=false ava --watch"
+		"unit:watch": "nyc --reporter=lcovonly --reporter=text --exclude-after-remap=false ava --watch",
+		"unit:update-1": "nyc --reporter=lcovonly --reporter=text --exclude-after-remap=false ava --update-snapshots --match='creates mock field models for group field'"
 	},
 	"dependencies": {
 		"change-case": "^5.4.4"
