--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"type": "git",
 		"url": "ssh://git@github.com/prismicio/prismic-mock.git"
 	},
+	"type": "module",
 	"license": "Apache-2.0",
 	"author": "Prismic <contact@prismic.io> (https://prismic.io)",
 	"sideEffects": false,
