--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
 		"unit:watch": "npm run unit -- --watch"
 	},
 	"devDependencies": {
-		"@prismicio/client": "7.16.0-alpha.1",
+		"@prismicio/client": "7.16.0",
 		"@size-limit/preset-small-lib": "^11.1.2",
 		"@types/node": "^20.12.7",
 		"@typescript-eslint/eslint-plugin": "^7.6.0",
