--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@prismicio/mock",
-	"version": "0.6.1",
+	"version": "0.7.0-alpha.7",
 	"description": "Generate mock Prismic documents, fields, Slices, and models for development and testing environments",
 	"keywords": [
 		"typescript",
@@ -60,7 +60,8 @@
 		"unit:watch": "npm run unit -- --watch"
 	},
 	"devDependencies": {
-		"@prismicio/client": "7.11.0",
+		"@prismicio/client": "^7.16.0",
+		"@prismicio/types-internal": "^3.5.0",
 		"@size-limit/preset-small-lib": "^11.1.2",
 		"@types/node": "^20.12.7",
 		"@typescript-eslint/eslint-plugin": "^7.6.0",
